# fuchsia

peridot/web/cloud_dashboard/: package-lock.json
zircon/scripts/: flash-sargo
zircon/system/dev/board/: BUILD.gn
zircon/system/dev/board/sargo/: BUILD.gn  sargo-devices.c  sargo.c  sargo.h
zircon/system/dev/display/simple/: BUILD.gn  simple-platform.cpp
zircon/system/dev/display/simple/include/: simple-display-metadata.h
zircon/system/ulib/ddk/include/ddk/: platform-defs.h
